[gd_scene load_steps=2 format=3 uid="uid://270cfugfeqnh"]

[ext_resource type="Script" uid="uid://nvjm5hkvh4gb" path="res://settings.gd" id="1_x2hje"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_x2hje")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 102.0
offset_top = 42.0
offset_right = 1044.0
offset_bottom = 596.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 27.0
offset_top = 27.0
offset_right = 922.0
offset_bottom = 524.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Audio" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Audio"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Audio"
horizontal_alignment = 1

[node name="General" type="HBoxContainer" parent="Panel/VBoxContainer/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Audio/General"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "General   "
horizontal_alignment = 2

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/Audio/General"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Music" type="HBoxContainer" parent="Panel/VBoxContainer/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Audio/Music"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Music   "
horizontal_alignment = 2

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/Audio/Music"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SoundEffects" type="HBoxContainer" parent="Panel/VBoxContainer/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Audio/SoundEffects"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Sound Effects   "
horizontal_alignment = 2

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/Audio/SoundEffects"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer/Audio"]
layout_mode = 2

[node name="Controls" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 30
text = "Controls"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Controls"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Controls/HBoxContainer"]
layout_mode = 2

[node name="Left" type="HBoxContainer" parent="Panel/VBoxContainer/Controls/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Controls/HBoxContainer/VBoxContainer/Left"]
custom_minimum_size = Vector2(255, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Left   "
horizontal_alignment = 2

[node name="Button" type="Button" parent="Panel/VBoxContainer/Controls/HBoxContainer/VBoxContainer/Left"]
custom_minimum_size = Vector2(150, 0)
layout_direction = 3
layout_mode = 2
text = "A"

[node name="Right" type="HBoxContainer" parent="Panel/VBoxContainer/Controls/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Controls/HBoxContainer/VBoxContainer/Right"]
custom_minimum_size = Vector2(255, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Right   "
horizontal_alignment = 2

[node name="Button" type="Button" parent="Panel/VBoxContainer/Controls/HBoxContainer/VBoxContainer/Right"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "D"

[node name="Jump" type="HBoxContainer" parent="Panel/VBoxContainer/Controls/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Controls/HBoxContainer/VBoxContainer/Jump"]
custom_minimum_size = Vector2(255, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Jump   "
horizontal_alignment = 2

[node name="Button" type="Button" parent="Panel/VBoxContainer/Controls/HBoxContainer/VBoxContainer/Jump"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Space"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/Controls/HBoxContainer"]
layout_mode = 2

[node name="RotateLeft" type="HBoxContainer" parent="Panel/VBoxContainer/Controls/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/RotateLeft"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Rotate Left   "
horizontal_alignment = 2

[node name="Button" type="Button" parent="Panel/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/RotateLeft"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "A"

[node name="RotateRight" type="HBoxContainer" parent="Panel/VBoxContainer/Controls/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/RotateRight"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Rotate Right   "
horizontal_alignment = 2

[node name="Button" type="Button" parent="Panel/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/RotateRight"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "D"

[node name="Back" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_vertical = 10
text = "Back"
